Modified header and added subtitle and footer to homepage

--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
     <title>Iceland Travel Project</title>
 </head>
 <body>
-    <h1>Iceland Travel Project</h1>
+    <h1>Welcome to Reykjavik</h1>
+    <h2>Capital city of Iceland</h2>
+    
+    <footer>
+        This project was coded by Nancy Duong and is open-sourced on
+        <a href="https://github.com/nanceed/iceland-travel-project">GitHub</a>
+    </footer>
 </body>
 </html>
