--- a/index.html
+++ b/index.html
@@ -22,9 +22,44 @@
       <a href="#">Learn more</a>
     </header>
     <footer>
-      This project was coded by Nancy Duong and is open-sourced on
-      <a href="https://github.com/nanceed/iceland-travel-project">GitHub</a>
-    </footer>
+      <section class="grid">
+      <div>
+      <h3>More about Reykjavik</h3>
+
+      <ul>
+        <li>
+          <a href="https://www.isavia.is/en/keflavik-airport" target="_blank">
+          Reykjavik Airport website</a>
+        </li>
+        <li>
+          <a href="https://maps.app.goo.gl/7eSqZyZMVBeWZdNs6" target="_blank">
+          Map of Reykjavik</a>
+        </li>
+        <li>
+          <a href="https://visitreykjavik.is/public-transportation" target="_blank">
+          Public transport map</a>
+        </li>
+      </ul>
+      </div>
+
+      <div>
+        <h3>About me</h3>
+        <p>Hi! My name is Matt and I've been living in Lisbon for several years. I'm very fond of the city. I created this page as
+        part of a project for SheCodes Responsive to develop my coding skills.
+        </p>
+      </div>
+
+      <div>
+        <h3>About this website</h3>
+        <p>
+          I created this page as part of a project for SheCodes Responsive to develop my coding skills.
+        </p>
+        <br />
+        This project was coded by Nancy Duong and is open-sourced on
+        <a href="https://github.com/nanceed/iceland-travel-project">GitHub</a>
+      </div>
+    </footer> 
   </div>
+</section>
 </body>
 </html>
