Added new image and grid templates

--- a/index.html
+++ b/index.html
@@ -21,8 +21,32 @@
       <h2>Capital city of Iceland</h2>
       <a href="#">Learn more</a>
     </header>
+    <main>
+      <section class="grid grid-2-columns">
+        <div>
+      <img src="images/icelandharpa.jpeg" alt="Reykajavik Church" class="img-responsive">
+      </div>
+      <div>
+      <h2>Why Reykjavik?</h2>
+      <h3>A city of bold contrast</h3>
+      <p>
+        Reykjavík is the natural starting point for any visit to Iceland, and not undeservedly so. The capital is world-renowned
+        for its culture, history, and natural beauty on all fronts.
+        Reykjavík is a city of bold contrasts: it is both cosmopolitan and small-town; vibrant and sophisticated; young-at-heart
+        and yet full of history. Many monuments, new and old, are also worth a peek, including the newly built oceanfront music
+        and conference centre, Harpa.
+      </p>
+      <p>
+        The pulsing beat of energy and lively events keeps Reykjavík alive and exciting and people are often surprised and
+        impressed at how much culture, art and activities thrive in the city. But besides being world-renowned for it's vibrant
+        culture, Reykjavík is truly the gateway to Iceland. The capital area has enough natural wonders at its doorstep to serve
+        as a convenient base for exploring a great deal of spectacular landscape in several directions.
+      </p>
+      </div>
+      </section>
+    </main>
     <footer>
-      <section class="grid">
+      <section class="grid grid-3-columns-with-first-narrow">
       <div>
       <h3>More about Reykjavik</h3>
 
