Added alternative texts and changed max-width to width

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           </div>
           <div class="card">
             <div class="card-header">
-            <img src="attractions/icleandbluelagoon.jpg" alt="Hallgrimskirkja Church" class="img-responsive">
+            <img src="attractions/icleandbluelagoon.jpg" alt="Blue Lagoon" class="img-responsive">
             </div>
 
             <div class="card-body">
@@ -93,7 +93,7 @@
           </div>
           <div class="card">
             <div class="card-header">
-            <img src="attractions/icelandringroad.jpeg" alt="Hallgrimskirkja Church" class="img-responsive">
+            <img src="attractions/icelandringroad.jpeg" alt="The Ring Road" class="img-responsive">
             </div>
 
             <div class="card-body">
