--- a/index.html
+++ b/index.html
@@ -405,8 +405,7 @@
 
       <div>
         <h3>About me</h3>
-        <p>Hi! My name is Matt and I've been living in Lisbon for several years. I'm very fond of the city. I created this page as
-        part of a project for SheCodes Responsive to develop my coding skills.
+        <p>Hi! My name is Nancy and I love traveling the world. One of my favorite places I've visited is Reykjavik, Iceland. Reykjavik has so much to offer from their rich culture, delectable cuisine and natural wonders.
         </p>
       </div>
 
