--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </h3>
       <h1>Welcome to Reykjavik</h1>
       <h2>Capital city of Iceland</h2>
-      <a href="#">Learn more</a>
+      <a href="#more">Learn more</a>
     </header>
     <main>
       <section class="grid grid-2-columns">
@@ -27,6 +27,7 @@
       <img src="images/icelandharpa.jpeg" alt="Reykajavik Church" class="img-responsive">
       </div>
       <div>
+        <a name="more"></a>
       <h2>Why Reykjavik?</h2>
       <h3>A city of bold contrast</h3>
       <p>
