Updated github link in footer and changed linear-gradient in header

--- a/index.html
+++ b/index.html
@@ -416,7 +416,7 @@
           I created this page as part of a project for SheCodes Responsive to develop my coding skills.
           <br />
           This project was coded by Nancy Duong and is open-sourced on
-          <a href="https://github.com/nanceed/iceland-travel-project">GitHub</a>
+          <a href="https://github.com/nanceed/iceland-travel-project" target="_blank">GitHub</a>
         </p>
       </div>
     </footer> 
