--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </section>
       <section class="secondary">
         <h2 class="text-center">Attractions</h2>
-        <h3 class="text-center">What to do in Reykajavik</h3>
+        <h3 class="text-center">What to do in Reykjavik</h3>
 
         <div class="grid grid-3-columns">
           <div class="card">
